--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,18 @@
 ---
 # defaults file for computate.computate_solr_openshift
+SOLR_VERSION: 8.8.1
+SOLR_OPT: /opt/solr
+PROJECT_ANSIBLE_INVENTORY: /usr/local/src/computate.org-ansible
+PROJECT_ANSIBLE_VAULT: "{{ PROJECT_ANSIBLE_INVENTORY }}/vaults/{{ VAULT_ID }}/vault"
+REDHAT_OPENSHIFT_STORAGE_CLASS_NAME: gp2
+
+# Enable Solr Basic Authentication/Authorization
+ENABLE_SOLR_BASIC_AUTH: false
+
+# Enable Solr SSL
+ENABLE_SOLR_SSL: false
+SSL_KEYSTORE_PATH: /opt/keystore
+SSL_JKS_FILENAME: "{{ SSL_ALIAS }}.jks"
+SSL_JKS_PATH: "{{ SSL_KEYSTORE_PATH }}/{{ SSL_JKS_FILENAME }}"
+SSL_JKS_PASSWORD: "..."
+SSL_JKS_BASE64: "{{ lookup('file', '{{ SSL_JKS_PATH }}') | b64encode }}"
