--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,40 @@
 ---
-# defaults file for computate.computate_solr_openshift
-SOLR_VERSION: 8.8.1
+
+######################
+# OpenShift defaults #
+######################
+
+# The OpenShift base URL where applications will be deployed.
+REDHAT_OPENSHIFT_HOST: https://api.rh-us-east-1.openshift.com
+# The OpenShift secret token to grant access to OpenShift (https://api.pro-us-east-1.openshift.com/oauth/token/request).
+REDHAT_OPENSHIFT_TOKEN: "..."
+# The OpenShift namespace where applications will be deployed.
+REDHAT_OPENSHIFT_NAMESPACE: "rh-impact"
+
+#################
+# Solr defaults #
+#################
+
+# The directory for solr. 
 SOLR_OPT: /opt/solr
-PROJECT_ANSIBLE_INVENTORY: /usr/local/src/computate.org-ansible
-PROJECT_ANSIBLE_VAULT: "{{ PROJECT_ANSIBLE_INVENTORY }}/vaults/{{ VAULT_ID }}/vault"
+# The version of solr to use. 
+SOLR_VERSION: 8.8.1
+# The size of the solr data volume. 
+SOLR_VOLUME_SIZE: 1Gi
+# The OpenShift storage class for the solr persistent volume claim. 
 REDHAT_OPENSHIFT_STORAGE_CLASS_NAME: gp2
+# The default port that Solr runs.
+SOLR_PORT: 8983
+# The Solr OpenShift base URL where Solr will be deployed.
+SOLR_HOST: "{{REDHAT_OPENSHIFT_HOST}}"
+# The Solr OpenShift secret token to grant access to OpenShift (https://api.pro-us-east-1.openshift.com/oauth/token/request).
+SOLR_TOKEN: "{{REDHAT_OPENSHIFT_TOKEN}}"
+# The Solr OpenShift namespace where Solr be deployed.
+SOLR_NAMESPACE: "{{REDHAT_OPENSHIFT_NAMESPACE}}"
+# The Solr volume size for Solr files.
+SOLR_VOLUME_SIZE: 2Gi
+# The default hostname for the Solr search engine.
+SOLR_HOST_NAME: "solr.{{SOLR_NAMESPACE}}.svc"
 
 # Enable Solr Basic Authentication/Authorization
 ENABLE_SOLR_BASIC_AUTH: false
@@ -16,3 +46,26 @@ SSL_JKS_FILENAME: "{{ SSL_ALIAS }}.jks"
 SSL_JKS_PATH: "{{ SSL_KEYSTORE_PATH }}/{{ SSL_JKS_FILENAME }}"
 SSL_JKS_PASSWORD: "..."
 SSL_JKS_BASE64: "{{ lookup('file', '{{ SSL_JKS_PATH }}') | b64encode }}"
+
+######################
+# Zookeeper defaults #
+######################
+
+# The version of zookeeper to use. 
+ZOOKEEPER_VERSION: 3.6.2
+# The size of the zookeeper data volume. 
+ZOOKEEPER_VOLUME_SIZE: 1Gi
+# The OpenShift storage class for the zookeeper persistent volume claim. 
+REDHAT_OPENSHIFT_STORAGE_CLASS_NAME: gp2
+# The default port that Zookeeper runs to manage the cluster.
+ZOOKEEPER_PORT: 2181
+# The Zookeeper OpenShift base URL where Zookeeper will be deployed.
+ZOOKEEPER_HOST: "{{REDHAT_OPENSHIFT_HOST}}"
+# The Zookeeper OpenShift secret token to grant access to OpenShift (https://api.pro-us-east-1.openshift.com/oauth/token/request).
+ZOOKEEPER_TOKEN: "{{REDHAT_OPENSHIFT_TOKEN}}"
+# The Zookeeper OpenShift namespace where Zookeeper will be deployed.
+ZOOKEEPER_NAMESPACE: "{{REDHAT_OPENSHIFT_NAMESPACE}}"
+# The Zookeeper volume size for Zookeeper files.
+ZOOKEEPER_VOLUME_SIZE: 1Gi
+# The default hostname for the Zookeeper cluster manager.
+ZOOKEEPER_HOST_NAME: "zookeeper.{{ZOOKEEPER_NAMESPACE}}.svc"
