--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,23 +1,17 @@
 ---
 # tasks file for computate.computate_solr_openshift
 
-- name: Install solr configset configmap
-  k8s:
-    state: present
-    name: solr-configset
-    host: "{{ZOOKEEPER_HOST}}"
-    api_key: "{{ZOOKEEPER_TOKEN}}"
-    namespace: "{{ZOOKEEPER_NAMESPACE}}"
-    definition: "{{ lookup('template', 'project_solr_configset_configmap.yml') }}"
-    validate_certs: false
+- name: Upload solr configset configmap
+  shell: "oc login {{SOLR_HOST}} --token={{SOLR_TOKEN}} && oc create configmap solr-configset --from-file=/usr/local/src/computate/config/solr/server/solr/configsets/computate/conf/ --dry-run -o yaml -n {{ SOLR_NAMESPACE }} | oc apply -n {{ SOLR_NAMESPACE }} -f -"
+  ignore_errors: true
 
 - name: Install solr keystore
   k8s:
     state: present
     name: solr-keystore
-    host: "{{ZOOKEEPER_HOST}}"
-    api_key: "{{ZOOKEEPER_TOKEN}}"
-    namespace: "{{ZOOKEEPER_NAMESPACE}}"
+    host: "{{SOLR_HOST}}"
+    api_key: "{{SOLR_TOKEN}}"
+    namespace: "{{SOLR_NAMESPACE}}"
     definition: "{{ lookup('template', 'project_solr_keystore.yml') }}"
     validate_certs: false
   when: ENABLE_SOLR_SSL
@@ -26,9 +20,9 @@
   k8s:
     state: present
     name: solr-bin-secret
-    host: "{{ZOOKEEPER_HOST}}"
-    api_key: "{{ZOOKEEPER_TOKEN}}"
-    namespace: "{{ZOOKEEPER_NAMESPACE}}"
+    host: "{{SOLR_HOST}}"
+    api_key: "{{SOLR_TOKEN}}"
+    namespace: "{{SOLR_NAMESPACE}}"
     definition: "{{ lookup('template', 'project_solr_bin_secret.yml') }}"
     validate_certs: false
   when: ENABLE_SOLR_SSL
@@ -72,6 +66,10 @@
     namespace: "{{SOLR_NAMESPACE}}"
     definition: "{{ lookup('template', 'project_solr_service.yml') }}"
     validate_certs: false
+
+- name: Upload computate configset to solr
+  shell: "oc login {{ SOLR_HOST }} --token={{ REDHAT_OPENSHIFT_TOKEN }} && oc exec $(oc get pod -l app=solr -o jsonpath='{.items[0].metadata.name}' -n {{ SOLR_NAMESPACE }}) -n {{ SOLR_NAMESPACE }} -- /opt/solr/bin/solr zk upconfig -n computate -d {{ SOLR_OPT }}/server/solr/configsets/computate -z '{{ ZOOKEEPER_HOST_NAME }}:{{ ZOOKEEPER_PORT }}' || true"
+  register: create_configset
 
 - name: Upload security configuration to zookeeper
   shell: "oc login {{SOLR_HOST}} --token={{SOLR_TOKEN}} && oc exec $(oc get pod -l app=solr -o jsonpath='{.items[0].metadata.name}') -n {{SOLR_NAMESPACE}} -- {{SOLR_OPT}}/bin/solr auth enable -credentials '{{ SOLR_USER }}:{{ SOLR_PASSWORD }}' -blockUnknown true"
