Fixing bugs with ansible deployment.

--- a/templates/project_solr_persistent_volume_claim.yml
+++ b/templates/project_solr_persistent_volume_claim.yml
@@ -13,4 +13,4 @@ spec:
   resources:
     requests:
       storage: {{SOLR_VOLUME_SIZE}}
-  storageClassName: "{{ REDHAT_OPENSHIFT_STORAGE_CLASS_NAME }}"
+  storageClassName: "{{ SOLR_STORAGE_CLASS_NAME }}"
