Fixing empty persistent volume class name.

--- a/templates/project_solr_persistent_volume_claim.yml
+++ b/templates/project_solr_persistent_volume_claim.yml
@@ -13,4 +13,6 @@ spec:
   resources:
     requests:
       storage: {{ SOLR_VOLUME_SIZE }}
+{% if SOLR_STORAGE_CLASS_NAME is defined %}
   storageClassName: "{{ SOLR_STORAGE_CLASS_NAME }}"
+{% endif %}
